syntax = "proto3";

package active_code;

enum ActiveCodeKind {
    Register = 0;
    ResetPassword = 1;
}
message ActiveCode {
    string code = 1;
    ActiveCodeKind kind = 2;
    string email = 3;
}